--- a/settings.json
+++ b/settings.json
@@ -1,30 +1,30 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
-    "mainTitle": "난 무슨 동물상일까",
-    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
+    "pageTitle": "나는 중동의 어느나라 사람일까",
+    "mainTitle": "난 중동의 어느나라 사람일까",
+    "subtitle": "얼굴로 보는 인공지능 중동상 테스트",
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/CPrPznTPo/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/KEWXgb-D8/",
     "classDetails": [
         {
-            "name": "강아지",
-            "title": "강아지상",
-            "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
-            "celeb": "",
+            "name": "아랍인",
+            "title": "아랍인",
+            "explain": "흔히 대한민국이 속한 동북아시아는 지역 혹은 민족적[7]으로 정체성을 따지지만 아랍인은 언어를 통해 그 정체성을 정의한다. 때문에 같은 아랍인이라고 해도 시리아의 아랍인과 이집트의 아랍인, 모로코의 아랍인은 서로 다르며 외모로도 문화적으로도 공통점을 별로 찾을 수 없는 경우가 자주 있다. 오스만 제국 시절 은퇴한 예니체리들의 실버 타운으로 각광받았던 튀니지 몇몇 해안 마을들에는 금발벽안에 가까운 아랍인들도 꽤 있는 반면 수단에 가면 많은 생긴 건 전형적인 사하라 이남 아프리카처럼 생긴 흑인들도 아랍인이다. 종교로 정의하기도 힘든데 같은 뿌리고 아랍어를 쓰지만 오리엔트 정교회 신자인 아랍인도 많다.",
+            "celeb": "유명 아랍인 : 알라딘, 자스민, 자파",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
-            "name": "말",
-            "title": "말상",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
+            "name": "ㅣ이스라엘인",
+            "title": "이스라엘인",
+            "explain": "유대인이라는 개념과 구분되는 이유는 이스라엘 영토 내에선 유대인이 100% 거주하는 것이 아니고 이스라엘 무슬림과 드루즈, 기독교인들도 거주하고 있기 때문이다.[4] 이스라엘인을 관습적으로 종교별로 구분하고 있고 히브리인과 유대인을 유의어로 간주하고 있다",
+            "celeb": "유명 이스라엘인 : 피터 파커, 예수, 성모 마리아",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
-            "name": "고양이",
-            "title": "고양이상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "name": "파키스탄인",
+            "title": "파키스탄인",
+            "explain": "파키스탄 국적이 있는 사람들을 의미한다. 파키스탄에 거주하는 주요 민족은 펀자브인, 신드인, 발루치족, 파슈툰족 이다. 거의 대부분 인도아리아계통의 사람들이다. 이 중에 파키스탄을 주도하는 주류 민족은 펀자브인이다. 인도와 파키스탄은 1947년에 종교에 따라 분리한 관계로 파키스탄을 인도계 국가로 알려져있지만 이란계 민족인 발루치족과 파슈툰족이 서부에 거주하고 있다.",
+            "celeb": "유명 파키스탄인:.....",
             "color": "rgba(265, 100, 50, 1)"
         }
     ]
