--- a/settings.json
+++ b/settings.json
@@ -9,14 +9,14 @@
         {
             "name": "아랍인",
             "title": "아랍인",
-            "explain": "흔히 대한민국이 속한 동북아시아는 지역 혹은 민족적[7]으로 정체성을 따지지만 아랍인은 언어를 통해 그 정체성을 정의한다. 때문에 같은 아랍인이라고 해도 시리아의 아랍인과 이집트의 아랍인, 모로코의 아랍인은 서로 다르며 외모로도 문화적으로도 공통점을 별로 찾을 수 없는 경우가 자주 있다. 오스만 제국 시절 은퇴한 예니체리들의 실버 타운으로 각광받았던 튀니지 몇몇 해안 마을들에는 금발벽안에 가까운 아랍인들도 꽤 있는 반면 수단에 가면 많은 생긴 건 전형적인 사하라 이남 아프리카처럼 생긴 흑인들도 아랍인이다. 종교로 정의하기도 힘든데 같은 뿌리고 아랍어를 쓰지만 오리엔트 정교회 신자인 아랍인도 많다.",
+            "explain": "흔히 대한민국이 속한 동북아시아는 지역 혹은 민족적으로 정체성을 따지지만 아랍인은 언어를 통해 그 정체성을 정의한다. 때문에 같은 아랍인이라고 해도 시리아의 아랍인과 이집트의 아랍인, 모로코의 아랍인은 서로 다르며 외모로도 문화적으로도 공통점을 별로 찾을 수 없는 경우가 자주 있다. 오스만 제국 시절 은퇴한 예니체리들의 실버 타운으로 각광받았던 튀니지 몇몇 해안 마을들에는 금발벽안에 가까운 아랍인들도 꽤 있는 반면 수단에 가면 많은 생긴 건 전형적인 사하라 이남 아프리카처럼 생긴 흑인들도 아랍인이다. 종교로 정의하기도 힘든데 같은 뿌리고 아랍어를 쓰지만 오리엔트 정교회 신자인 아랍인도 많다.",
             "celeb": "유명 아랍인 : 알라딘, 자스민, 자파",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
             "name": "ㅣ이스라엘인",
             "title": "이스라엘인",
-            "explain": "유대인이라는 개념과 구분되는 이유는 이스라엘 영토 내에선 유대인이 100% 거주하는 것이 아니고 이스라엘 무슬림과 드루즈, 기독교인들도 거주하고 있기 때문이다.[4] 이스라엘인을 관습적으로 종교별로 구분하고 있고 히브리인과 유대인을 유의어로 간주하고 있다",
+            "explain": "유대인이라는 개념과 구분되는 이유는 이스라엘 영토 내에선 유대인이 100% 거주하는 것이 아니고 이스라엘 무슬림과 드루즈, 기독교인들도 거주하고 있기 때문이다. 이스라엘인을 관습적으로 종교별로 구분하고 있고 히브리인과 유대인을 유의어로 간주하고 있다",
             "celeb": "유명 이스라엘인 : 피터 파커, 예수, 성모 마리아",
             "color": "rgba(251, 176, 59, 1)"
         },
